# test_task

./: README.md  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
users/: admin.py  models.py  urls.py
users/migrations/: 0001_initial.py
